--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     <title>Tailwind Basics</title>
 </head>
 <body>
-    <div class="container mx-auto bg-red-500">This is a div element</div>
+    <div class="w-1/3 h-40 bg-red-500">This is a div element</div>
 </body>
 </html>
