--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <title>Tailwind Basics</title>
 </head>
 <body>
-    <div class="w-1/3 h-40 bg-red-500">This is a div element</div>
+    <div class="flex flex-row-reverse bg-yellow-500 w-auto">
+        <div class="h-10 w-10 bg-red-500">1</div>
+        <div class="h-10 w-10 bg-green-500">2</div>
+        <div class="h-10 w-10 bg-blue-500">3</div>
+    </div>
 </body>
 </html>
