--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <title>Tailwind Basics</title>
 </head>
 <body>
-    <div class="flex flex-row-reverse bg-yellow-500 w-auto">
-        <div class="h-10 w-10 bg-red-500">1</div>
-        <div class="h-10 w-10 bg-green-500">2</div>
-        <div class="h-10 w-10 bg-blue-500">3</div>
+    <div class="flex flex-wrap bg-yellow-500 w-auto">
+        <div class="h-10 w-80 bg-red-500">1</div>
+        <div class="h-10 w-80 bg-green-500">2</div>
+        <div class="h-10 w-80 bg-blue-500">3</div>
     </div>
 </body>
 </html>
