--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,18 @@
     <title>Tailwind Basics</title>
 </head>
 <body>
-    <div class="flex bg-yellow-500 w-auto">
-        <div class="order-3 h-10 w-80 bg-red-500">1</div>
-        <div class="order-1 h-10 w-80 bg-green-500">2</div>
-        <div class="order-2 h-10 w-80 bg-blue-500">3</div>
+    <div class="bg-yellow-500 w-auto grid grid-cols-3 gap-4">
+        <div class="col-span-2 h-20 bg-red-500">1</div>
+        <div class="h-20 bg-red-500">2</div>
+        <div class="h-20 bg-red-500">3</div>
+
+        <div class="h-20 bg-red-500">4</div>
+        <div class="h-20 bg-red-500">5</div>
+        <div class="h-20 bg-red-500">6</div>
+
+        <div class="h-20 bg-red-500">7</div>
+        <div class="h-20 bg-red-500">8</div>
+        <div class="h-20 bg-red-500">9</div>
     </div>
 </body>
 </html>
