--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <title>Tailwind Basics</title>
 </head>
 <body>
-    <div class="bg-yellow-500 w-auto grid grid-cols-3 gap-4">
-        <div class="col-span-2 h-20 bg-red-500">1</div>
+    <div class="bg-yellow-500 w-auto grid grid-rows-4 grid-flow-col gap-4">
+        <div class="row-span-4 h-20 bg-red-500">1</div>
         <div class="h-20 bg-red-500">2</div>
         <div class="h-20 bg-red-500">3</div>
 
